--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -17,98 +17,13 @@ $secondary: rgba($black, 0.5);
 $desktop: 1024px;
 $tablet: 720px;
 
-body {
-  background-color: rgba($black, 0.05);
-  font-family: $SourceSansPro;
-  font-weight: 400;
-}
-
-.App {
-  margin: 50px auto;
-  width: 450px;
-}
-
-.Events {
-  &__Info {
-    &__Name {
-      margin: 0 0 15px 0;
-    }
-  }
-}
-
-.Address {
-  margin: 0 0 30px 0;
-
-  &__Establishment,
-  &__Street,
-  &__CityCountry {
-    margin: 0;
-  }
-}
-
-.Offer {
-  background-color: $white;
-  border: rgba($black, 0.1) 1px solid;
-  border-radius: 4px;
-  margin: 0 0 15px 0;
-  padding: 15px;
-
-  &__Name,
-  &__Description {
-    margin: 0;
-  }
-
-  &__Description {
-    border-bottom: rgba($black, 0.1) 1px solid;
-    font-weight: 300;
-    margin: 5px 0 15px 0;
-    padding: 0 0 10px 0;
-  }
-}
-
-.Batch {
-  display: flex;
-  justify-content: space-between;
-  margin: 15px 0 0 0;
-}
-
-.Cart {
-  &__Title {
-    font-size: 18px;
-    font-weight: 700;
-  }
-
-  &__ItemsList {
-    list-style: none;
-    padding: 0;
-
-    &__Item {
-      align-items: center;
-      display: flex;
-      justify-content: space-between;
-      padding: 6px 0;
-    }
-  }
-
-  &__Total {
-    border-top: rgba($black, 0.1) 1px solid;
-    display: flex;
-    font-size: 16px;
-    font-weight: 700;
-    justify-content: flex-end;
-    margin: 10px 0 0 0;
-    padding: 10px 0 0 0;
-  }
-}
-
-.Checkout {
-  border-top: rgba($black, 0.1) 1px solid;
-  display: flex;
-  justify-content: space-between;
-  margin: 10px 0;
-  padding: 10px 0;
-}
-
+@import 'defaults';
+@import 'events';
+@import 'address';
+@import 'offer';
+@import 'batch';
+@import 'cart';
+@import 'checkout';
 @import 'fee';
 @import 'select';
 @import 'button';
