Fix CartItems and CSS improvements

--- a/src/sass/_cart.scss
+++ b/src/sass/_cart.scss
@@ -8,10 +8,11 @@
     list-style: none;
     padding: 0;
 
+    &__Name {
+      margin: 0;
+    }
+
     &__Item {
-      align-items: center;
-      display: flex;
-      justify-content: space-between;
       padding: 6px 0;
     }
   }
