--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -23,6 +23,7 @@ $tablet: 720px;
 @import 'offer';
 @import 'batch';
 @import 'cart';
+@import 'cartitem';
 @import 'checkout';
 @import 'fee';
 @import 'select';
